Revision history for File-Map

{{$NEXT}}

0.70      2023-04-02 22:27:45+02:00 Europe/Amsterdam
          - Fix backwards compatability issue

0.69      2023-04-02 22:07:56+02:00 Europe/Amsterdam
          - Move almost all code from .pm file into .xs file

0.68      2023-03-25 10:32:11+01:00 Europe/Amsterdam
          - Re-eliminate second magic vtable
          - Eliminate all CODE blocks in XS

0.67      2020-06-26 00:26:54+02:00 Europe/Amsterdam
          - Fix unresolved symbol "madvise" on QNX NTO
          - Fix regression that could cause empty maps to crash upon reuse.

0.66      2018-12-18 16:57:58+01:00 Europe/Amsterdam
          - Warn when buffer gets truncated

0.65      2017-10-30 13:37:57+01:00 Europe/Amsterdam
          - Fix mapping into a hash element
          - Fix compilation warning by giving boot function a proper return type
          - Take into account sleep 0.1 may sleep a little less

0.64      2015-07-13 12:50:12+02:00 Europe/Amsterdam
          Fix segfault in empty mappings
          Skip tainting tests on non-tainting perls

0.63      2014-09-12 18:27:17+02:00 Europe/Amsterdam
          Fix error message on unknown protect mode

0.62      2014-08-16 14:34:48+02:00 Europe/Amsterdam
          Reuse perl's reentrant API
          Skip setlocale on android

0.61      2013-10-04 21:36:19 Europe/Amsterdam
          Improve 64 bit pointer logic on Windows

0.60      2013-08-11 01:20:06 Europe/Amsterdam
          Upgrade dependency to Test::Warnings 0.005

0.59      2013-08-09 11:04:45 Europe/Amsterdam
          Explicitly depend on Test::Warnings 0.004

0.58      2013-08-08 23:18:15 Europe/Amsterdam
          Converted from Test::Exception to Test::Fatal
          Converted Test::Warn and Test::NoWarnings to Test::Warnings

0.57      2013-05-25 23:48:07 Europe/Amsterdam
          Use correct maximum length on 64-bit Windows
          Re-add perl version suggestions

0.56      2012-12-20 23:49:14 Europe/Amsterdam