@@ -1,6 +1,7 @@
 Revision history for File-Map
 
 {{$NEXT}}
+          - Split out mmap-compat.c
 
 0.70      2023-04-02 22:27:45+02:00 Europe/Amsterdam
           - Fix backwards compatability issue
